crates/reposix-cache/tests/compile-fail/untainted_new_is_pub_crate.stderr
error[E0624]: associated function `new` is private
  --> tests/compile-fail/untainted_new_is_pub_crate.rs:12:34
   |
12 |         reposix_core::Untainted::new(vec![1, 2, 3]);
   |                                  ^^^ private associated function
   |
  ::: $WORKSPACE/crates/reposix-core/src/taint.rs
   |
   |     pub(crate) fn new(value: T) -> Self {
   |     ----------------------------------- private associated function defined here
